[package]
name = "ntl"
version = "0.1.0"
edition = "2018"

# dependencies added to new project
[dependencies]
input_lib = { path = "../../competition_lib/input_lib" }
gcd = { path = "../../competition_lib/gcd" }
prime = { path = "../../competition_lib/prime" }
proconio = { version = "0.4.3", features = ["derive"] }
# itertools = "0.10.1"
argio = "0.2.0"

[profile.release]
lto = true
panic = 'abort'
